<resources>
    <string name="app_name">Onefinance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backend_error_0">Something went error</string>
    <string name="common_continue">Continue</string>
    <string name="internet_connection_error">No internet connection</string>
    <string name="client_unauthorized_error">"Unauthorized "</string>
    <string name="onboarding_first_page_title">Limit Up To</string>
    <string name="onboarding_first_page_description">6,000,000EGP</string>
    <string name="onboarding_first_page_sub_description">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy</string>
    <string name="onboarding_second_page_title">Get Activated</string>
    <string name="onboarding_second_page_description">Just 3 minunts</string>
    <string name="onboarding_second_page_sub_description">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy</string>
    <string name="onboarding_third_page_title">Let\'s Flying</string>
    <string name="onboarding_third_page_description">Start your journey</string>
    <string name="onboarding_third_page_sub_description">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy</string>
    <string name="onboarding_skip_btn_title">Skip</string>
    <string name="onboarding_next_btn">Next</string>
    <string name="onboarding_first_signin_btn">First Sign in</string>
    <string name="onboarding_signin_btn">Signin</string>
    <string name="login_national_id_field_title">National ID Number</string>
    <string name="login_password_field_title">Password</string>
    <string name="login_forget_password_title">Forget Password?</string>
    <string name="login_hello_message_header">Hello\nAwesome Customer</string>
    <string name="login_signin_btn_title">Sigin</string>
    <string name="login_guest_btn_title">Continue without signin</string>
    <string name="login_or_text_title">OR</string>
    <string name="fingerprint_error_hw_not_available">No biometric features available on this device.</string>
    <string name="fingerprint_error_hw_not_present">Biometric features are currently unavailable.</string>
    <string name="fingerprint_error_no_fingerprints">No fingerprint found.</string>
    <string name="login_biometric_dialog_title">Welcome to souhoola</string>
    <string name="login_biometric_dialog_allow_button">Allow</string>
    <string name="login_biometric_dialog_description">Use fingerprint or face recognition to verify your identity</string>
    <string name="login_biometric_dialog_later_button">Do it later</string>
    <string name="otp_header">Enter 5 digits verification code Sent to your number</string>
    <string name="otp_did_not_recieve_title">Didn’t Recieved</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="lowercase_letters">Lowercase Letters</string>
    <string name="uppercase_letters">Uppercase Letters</string>
    <string name="digits">Digits</string>
    <string name="special_characters">Special Characters</string>
    <string name="password_new_pass_label">New Password</string>
    <string name="password_confirm_pass_label">Confirm New Password</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="min_length">Min length = 6 char</string>
    <string name="password_change_password_btn">Change Password</string>
    <string name="bottom_navigation_home_title">Home</string>
    <string name="bottom_navigation_card_title">Card</string>
    <string name="bottom_navigation_offer_title">Offers</string>
    <string name="bottom_navigation_calculator_title">Calculator</string>
    <string name="drawer_nav_installments_title">Installments</string>
    <string name="drawer_nav_transaction_history_title">Transactions History</string>
    <string name="drawer_nav_our_branches_title">Our Branches</string>
    <string name="drawer_nan_footer_title">Version %s\n© One Finance 2022. All Right Reserved </string>
    <string name="drawer_nav_contact_us_title">Contact us</string>
    <string name="drawer_nav_faqs_title">FAQs</string>
    <string name="drawer_nav_terms_and_conditions_title">Terms and Conditions</string>
    <string name="drawer_nav_logout_title">Logout</string>
    <string name="home_possibilities_tab_title">Possibilities</string>
    <string name="home_card_tab_title">Card</string>
    <string name="home_limit_title">Limit</string>
    <string name="home_spent_title">Spent</string>
    <string name="common_egp">EGP</string>
    <string name="home_recently_transaction_header">Recently Transaction</string>
    <string name="home_see_all_header">See all</string>
    <string name="transaction_status_pending">Pending</string>
    <string name="transaction_status_completed">Completed</string>
    <string name="err_manatory">Required</string>
</resources>