<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    tools:context=".presentation.auth.newpassword.PasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="137dp"
            android:src="@drawable/ic_onefinance_gld"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@null" />

        <com.onefinance.customerapp.core.presentation.views.PrimaryEditText
            android:id="@+id/new_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="83dp"
            app:trailingIcon="@drawable/ic_password_lock"
            android:layout_marginEnd="16dp"
            android:inputType="textPassword"
            android:label="@string/password_new_pass_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <com.onefinance.customerapp.core.presentation.views.PrimaryEditText
            android:id="@+id/primaryEditText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:trailingIcon="@drawable/ic_password_lock"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:label="@string/password_confirm_pass_label"
            app:layout_constraintEnd_toEndOf="@+id/new_password_et"
            app:layout_constraintStart_toStartOf="@+id/new_password_et"
            app:layout_constraintTop_toBottomOf="@+id/new_password_et" />

        <ImageView
            android:id="@+id/lowerCase_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/primaryEditText2"
            app:layout_constraintTop_toBottomOf="@+id/primaryEditText2"
            app:srcCompat="@drawable/ic_baseline_check_24"
            app:tint="@color/spanish_gray"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/lowerCase_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/lowercase_letters"
            android:textColor="#546E7A"
            app:layout_constraintBottom_toBottomOf="@+id/lowerCase_img"
            app:layout_constraintStart_toEndOf="@+id/lowerCase_img"
            app:layout_constraintTop_toTopOf="@+id/lowerCase_img" />

        <ImageView
            android:id="@+id/upperCase_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="@+id/lowerCase_img"
            app:layout_constraintTop_toBottomOf="@+id/lowerCase_img"
            app:srcCompat="@drawable/ic_baseline_check_24"
            app:tint="@color/spanish_gray" />

        <TextView
            android:id="@+id/upperCase_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/uppercase_letters"
            android:textColor="#546E7A"
            app:layout_constraintBottom_toBottomOf="@+id/upperCase_img"
            app:layout_constraintStart_toEndOf="@+id/upperCase_img"
            app:layout_constraintTop_toTopOf="@+id/upperCase_img" />

        <ImageView
            android:id="@+id/digit_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="@+id/upperCase_img"
            app:layout_constraintTop_toBottomOf="@+id/upperCase_img"
            app:srcCompat="@drawable/ic_baseline_check_24"
            app:tint="@color/spanish_gray" />

        <TextView
            android:id="@+id/digit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/digits"
            android:textColor="#546E7A"
            app:layout_constraintBottom_toBottomOf="@+id/digit_img"
            app:layout_constraintStart_toEndOf="@+id/digit_img"
            app:layout_constraintTop_toTopOf="@+id/digit_img" />

        <ImageView
            android:id="@+id/specialChar_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@null"
            app:tint="@color/spanish_gray"
            app:layout_constraintStart_toStartOf="@+id/digit_img"
            app:layout_constraintTop_toBottomOf="@+id/digit_img"
            app:srcCompat="@drawable/ic_baseline_check_24" />

        <TextView
            android:id="@+id/specialChar_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/special_characters"
            android:textColor="#546E7A"
            app:layout_constraintBottom_toBottomOf="@+id/specialChar_img"
            app:layout_constraintStart_toEndOf="@+id/specialChar_img"
            app:layout_constraintTop_toTopOf="@+id/specialChar_img" />

        <ImageView
            android:id="@+id/min_length_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:tint="@color/spanish_gray"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="@+id/specialChar_img"
            app:layout_constraintTop_toBottomOf="@+id/specialChar_img"
            app:srcCompat="@drawable/ic_baseline_check_24" />

        <TextView
            android:id="@+id/min_length_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/min_length"
            android:textColor="#546E7A"
            app:layout_constraintBottom_toBottomOf="@+id/min_length_img"
            app:layout_constraintStart_toEndOf="@+id/min_length_img"
            app:layout_constraintTop_toTopOf="@+id/min_length_img" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_password_btn"
            style="@style/PrimaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:enabled="false"
            android:text="@string/password_change_password_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/primaryEditText2"
            app:layout_constraintStart_toStartOf="@+id/primaryEditText2"
            app:layout_constraintTop_toBottomOf="@+id/min_length_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>