<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/metallic_yellow"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_one_finance_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/login_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:text="@string/login_hello_message_header"
                android:textColor="@color/charleston_green"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.onefinance.customerapp.core.presentation.views.PrimaryEditText
            android:id="@+id/national_id_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:inputType="number"
            android:label="@string/login_national_id_field_title"
            android:maxLength="14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:trailingIcon="@drawable/ic_national_id" />


        <com.onefinance.customerapp.core.presentation.views.PrimaryEditText
            android:id="@+id/password_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:inputType="textPassword"
            android:label="@string/login_password_field_title"
            app:showPasswordToggleIcon="true"
            app:layout_constraintEnd_toEndOf="@+id/national_id_field"
            app:layout_constraintStart_toStartOf="@+id/national_id_field"
            app:layout_constraintTop_toBottomOf="@+id/national_id_field"
            app:trailingIcon="@drawable/ic_password_lock" />

        <TextView
            android:id="@+id/forget_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_forget_password_title"
            android:textColor="@color/orange_red"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="@+id/password_field"
            app:layout_constraintTop_toBottomOf="@+id/password_field" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_btn"
            style="@style/PrimaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="0.9"
            android:text="@string/login_signin_btn_title"
            app:layout_constraintEnd_toStartOf="@+id/biometric_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password_txt" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/biometric_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.1"
            android:contentDescription="@null"
            android:elevation="0dp"
            android:src="@drawable/ic_biometric"
            android:stateListAnimator="@null"
            android:textColor="@color/charleston_green"
            app:backgroundTint="@color/chinese_black"
            app:elevation="0dp"
            app:fabCustomSize="64dp"
            app:fabSize="auto"
            app:layout_constraintBottom_toBottomOf="@+id/sign_in_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sign_in_btn"
            app:layout_constraintTop_toTopOf="@+id/sign_in_btn"
            app:tint="@color/metallic_yellow"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/or_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_or_text_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_btn" />

        <com.google.android.material.button.MaterialButton
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="42dp"
            android:text="@string/login_guest_btn_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/biometric_btn"
            app:layout_constraintStart_toStartOf="@+id/sign_in_btn"
            app:layout_constraintTop_toBottomOf="@id/or_txt" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

