<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="137dp"
            android:src="@drawable/ic_onefinance_gld"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="87dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/otp_header"
            android:textAlignment="center"
            android:textColor="@color/chinese_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="37dp"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:fontFamily="@font/poppins_medium"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:layoutDirection="ltr"
            app:pinBackgroundDrawable="@drawable/selector_otp_pin_drawable"
            android:maxLength="5"
            android:textDirection="ltr"
            android:textIsSelectable="false"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:pinAnimationType="popIn"
            android:focusedByDefault="true"
            app:pinBackgroundIsSquare="true"
            app:pinLineStroke="1dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:pinLineStrokeSelected="2dp"
            app:pinTextBottomPadding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:id="@+id/otp_timer_txt"
            android:layout_marginTop="19dp"
            android:textColor="@color/university_of_california_gold"
            app:layout_constraintEnd_toEndOf="@+id/code"
            app:layout_constraintStart_toStartOf="@+id/code"
            app:layout_constraintTop_toBottomOf="@+id/code"
            tools:text="00:30" />

        <TextView
            android:id="@+id/send_otp_again_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/otp_did_not_recieve_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_timer_txt" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/PrimaryButtonStyle"
            android:text="@string/onboarding_next_btn"
            android:layout_marginTop="80dp"
            android:id="@+id/next_btn"
            app:layout_constraintEnd_toEndOf="@+id/code"
            app:layout_constraintStart_toStartOf="@+id/code"
            app:layout_constraintTop_toBottomOf="@+id/send_otp_again_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>